# blackjack-counter

./: .gitignore  CLAUDE.md  Makefile  README.md  blackjack-counter.spec  build_windows.bat  build_windows.py  pyproject.toml  pytest.ini  test_customtkinter.py  test_ttkbootstrap.py  使用說明.txt
docs/: modern-ui.md
scripts/: run_app.py  run_modern_app.py  run_modern_ttk.py
src/: __init__.py
src/config/: __init__.py  deviations.yaml  shortcuts.yaml  strategy.yaml  wong_halves.yaml
src/core/: __init__.py  basic_strategy.py  card_counter.py  game_state.py  hand.py
src/gui/: __init__.py  app.py  app_modern.py  app_modern_qt.py  app_modern_ttk.py
src/utils/: __init__.py  resource_path.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_config_loading.py  test_game_flow.py
tests/unit/: __init__.py  test_basic_strategy.py  test_basic_strategy_deviations.py  test_card_counter.py  test_game_state.py  test_game_state_hand_management.py  test_surrender_strategy.py
tests/unit/test_fixtures/: test_strategy.yaml  test_wong_halves.yaml
